--- a/web/index.html
+++ b/web/index.html
@@ -6,14 +6,21 @@
     <!-- fonts -->
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <!-- font icons -->
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
-
+    <link rel="stylesheet"
+          href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
     <style>
         body, html {
             overflow: hidden;
             background: #f0f0f0;
             font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
             color: #182026;
+            height: 100%;
+            margin: 0;
+            padding: 0;
+        }
+
+        .v-Button {
+            margin-bottom: 5px;
         }
     </style>
 
